feat: add NewExpenseEditor module + link

--- a/PocketBudget/Storyboards/Base.lproj/Application.storyboard
+++ b/PocketBudget/Storyboards/Base.lproj/Application.storyboard
@@ -48,5 +48,20 @@
             </objects>
             <point key="canvasLocation" x="57.971014492753625" y="71.651785714285708"/>
         </scene>
+        <!--New Expense Editor View Controller-->
+        <scene sceneID="Vdw-eM-5x1">
+            <objects>
+                <viewController storyboardIdentifier="NewExpenseEditorViewController" id="oRl-Wd-gLq" customClass="NewExpenseEditorViewController" customModule="PocketBudget" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Hq2-li-BG9">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="7uB-gh-cIi"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vLh-Za-oDp" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="907" y="72"/>
+        </scene>
     </scenes>
 </document>
